Otimizações Reactions
